# sdc

./: README.html  README.md  meson.build
include/: game.h  inputhandler.h
src/: game.c  inputhandler.c  main.c
